--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "Discord_bot",
+  "name": "discord_bot",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "private": true,
   "dependencies": {
