--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
+    "axios": "^1.9.0",
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0"
   }
