--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "private": true,
   "dependencies": {
+    "@discordjs/rest": "^2.5.0",
     "@discordjs/voice": "^0.18.0",
     "axios": "^1.9.0",
     "discord.js": "^14.19.3",
